--- a/logReg/logReg/package.json
+++ b/logReg/logReg/package.json
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
     "element-ui": "^2.4.6",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
@@ -73,7 +74,7 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-dev-server": "^2.11.3",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
